# iiif-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  SECURITY.md  config.docker.toml  config.toml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
crates/iiif-auth/: Cargo.toml
crates/iiif-auth/src/: handlers.rs  lib.rs  middleware.rs  store.rs  types.rs
crates/iiif-auth/tests/: integration.rs
crates/iiif-core/: Cargo.toml
crates/iiif-core/src/: annotation.rs  config.rs  error.rs  identifier.rs  lib.rs  services.rs  state.rs
crates/iiif-core/src/storage/: cached.rs  filesystem.rs  mod.rs  object_store_backend.rs  routed.rs
crates/iiif-discovery/: Cargo.toml
crates/iiif-discovery/src/: handlers.rs  lib.rs  store.rs  types.rs
crates/iiif-image/: Cargo.toml
crates/iiif-image/examples/: gen_test_image.rs
crates/iiif-image/src/: handlers.rs  info.rs  lib.rs  pipeline.rs
crates/iiif-image/src/params/: format.rs  mod.rs  quality.rs  region.rs  rotation.rs  size.rs
crates/iiif-image/tests/: handlers.rs
crates/iiif-presentation/: Cargo.toml
crates/iiif-presentation/src/: builder.rs  handlers.rs  lib.rs  sidecar.rs  types.rs
crates/iiif-presentation/tests/: handlers.rs
crates/iiif-search/: Cargo.toml
crates/iiif-search/src/: handlers.rs  index.rs  lib.rs  types.rs
crates/iiif-server/: Cargo.toml
crates/iiif-server/src/: main.rs
crates/iiif-state/: Cargo.toml
crates/iiif-state/src/: codec.rs  handlers.rs  lib.rs  types.rs
images/public/: creation.toml
specyfikacja/: IIIF Authorization Flow API 2.0.html  IIIF Change Discovery API 1.0.html  IIIF Content Search API 2.0.html  IIIF Content State API 1.0.html  Image API 3.0.html  Presentation API 3.0.html
