[package]
name = "iiif-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
