[package]
name = "iiif-image"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iiif-core = { workspace = true }
iiif-auth = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
percent-encoding = { workspace = true }
httpdate = { workspace = true }
moka = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
async-trait = { workspace = true }
