[package]
name = "iiif-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
iiif-core = { workspace = true }
iiif-image = { workspace = true }
iiif-presentation = { workspace = true }
iiif-auth = { workspace = true }
iiif-search = { workspace = true }
iiif-state = { workspace = true }
iiif-discovery = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
